--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8">
   
-  <meta property="og:title" content="ImitationNet: Unsupervised human-to-robot motion retargeting via shared latent space"/>
-  <meta property="og:url" content="https://evm7.github.io/UnsH2R/"/>
+  <meta property="og:title" content="3D Whole-body Pose Estimation Using Graph High-Resolution Network for Humanoid Robot Teleoperation"/>
+  <meta property="og:url" content="https://z-mingyu.github.io/Graph-HRNet/"/>
   <meta property="og:image:width" content="1200"/>
   <meta property="og:image:height" content="630"/>
 
 
-  <title>ImitationNet: Unsupervised human-to-robot motion retargeting via shared latent space</title>
+  <title>3D Whole-body Pose Estimation Using Graph High-Resolution Network for Humanoid Robot Teleoperation</title>
   
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
@@ -35,7 +35,7 @@
 <body>
 
   
-<nav class="navbar" role="navigation" aria-label="main navigation">
+<!-- <nav class="navbar" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
       <span aria-hidden="true"></span>
@@ -85,16 +85,16 @@
     </div>
 
   </div>
-</nav>
+</nav> -->
 
 <section class="publication-header">
   <div class="hero-body">
     <div class="container is-max-widescreen">
       <!-- <div class="columns is-centered"> -->
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">ImitationNet: Unsupervised human-to-robot motion retargeting via shared latent space</h1>
+          <h1 class="title is-1 publication-title">3D Whole-body Pose Estimation Using Graph High-Resolution Network for Humanoid Robot Teleoperation</h1>
           <div class="is-size-3 publication-authors">
-            Humanoids, 2023
+            ICRA, 2025
           </div>
         </div>
     </div>
@@ -108,14 +108,17 @@
       <div class="columns is-centered">
         <div class="column has-text-centered">
           <div class="is-size-5 publication-authors">
-            <span class="author-block"><a href="https://www.tuwien.at/en/etit/ict/asl/team/yashuai-yan" target="_blank">Yashuai Yan*</a>,</span>
-           <span class="author-block"><a href="https://evm7.github.io/" target="_blank">Esteve Valls Mascaro*</a>,</span>
-            <span class="author-block"><a href="https://www.tuwien.at/etit/ict/asl/team/dongheui-lee" target="_blank">Dongheui Lee</a>
+            <span class="author-block"><sup>1</sup>Mingyu Zhang</span>
+	    <span class="author-block"><sup>1</sup>Qing Gao*</span>
+	    <span class="author-block"><sup>1</sup>Yuanchuan Lai</span>
+	    <span class="author-block"><sup>1</sup>Ye Zhang</span>
+	    <span class="author-block"><sup>2</sup>Tao Chang</span>
+	    <span class="author-block"><sup>1</sup>Yulan Guo</span>
           </div>
 
           <div class="is-size-5 publication-authors">
-            <span class="author-block">Technische Universit ̈at Wien (TUWien), German Aerospace Center (DLR)</span> 
-            <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
+            <span class="author-block"><sup>1</sup>Sun Yat-sen University,<sup>2</sup>National University of Defense Technology</span> 
+            <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Corresponding Author</small></span>
           </div>
           
 
