--- a/index.html
+++ b/index.html
@@ -108,16 +108,16 @@
       <div class="columns is-centered">
         <div class="column has-text-centered">
           <div class="is-size-5 publication-authors">
-            <span class="author-block"><sup>1</sup>Mingyu Zhang</span>
-	    <span class="author-block"><sup>1</sup>Qing Gao*</span>
-	    <span class="author-block"><sup>1</sup>Yuanchuan Lai</span>
-	    <span class="author-block"><sup>1</sup>Ye Zhang</span>
-	    <span class="author-block"><sup>2</sup>Tao Chang</span>
-	    <span class="author-block"><sup>1</sup>Yulan Guo</span>
+            <span class="author-block">Mingyu Zhang<sup>1</sup> </span>
+	    <span class="author-block">Qing Gao*<sup>1</sup> </span>
+	    <span class="author-block">Yuanchuan Lai<sup>1</sup> </span>
+	    <span class="author-block">Ye Zhang<sup>1</sup> </span>
+	    <span class="author-block">Tao Chang<sup>2</sup> </span>
+	    <span class="author-block">Yulan Guo<sup>1</sup></span>
           </div>
 
           <div class="is-size-5 publication-authors">
-            <span class="author-block"><sup>1</sup>Sun Yat-sen University,<sup>2</sup>National University of Defense Technology</span> 
+            <span class="author-block"><sup>1</sup>Sun Yat-sen University  <sup>2</sup>National University of Defense Technology</span> 
             <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Corresponding Author</small></span>
           </div>
           
