--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8">
   
-  <meta property="og:title" content="3D Whole-body Pose Estimation Using Graph High-Resolution Network for Humanoid Robot Teleoperation"/>
-  <meta property="og:url" content="https://z-mingyu.github.io/Graph-HRNet/"/>
+  <meta property="og:title" content="基于遥操作的智慧病房护理系统"/>
+  <meta property="og:url" content="https://github.com/Z-mingyu/Hospital/"/>
   <meta property="og:image:width" content="1200"/>
   <meta property="og:image:height" content="630"/>
 
 
-  <title>3D Whole-body Pose Estimation Using Graph High-Resolution Network for Humanoid Robot Teleoperation</title>
+  <title>基于遥操作的智慧病房护理系统</title>
   
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
@@ -92,9 +92,9 @@
     <div class="container is-max-widescreen">
       <!-- <div class="columns is-centered"> -->
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">3D Whole-body Pose Estimation Using Graph High-Resolution Network for Humanoid Robot Teleoperation</h1>
+          <h1 class="title is-1 publication-title">基于遥操作的智慧病房护理系统</h1>
           <div class="is-size-3 publication-authors">
-            ICRA, 2025
+            2024.03-2024.06
           </div>
         </div>
     </div>
@@ -107,7 +107,7 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <div class="is-size-5 publication-authors">
+<!--           <div class="is-size-5 publication-authors">
             <span class="author-block">Mingyu Zhang<sup>1</sup> </span>
 	    <span class="author-block">Qing Gao*<sup>1</sup> </span>
 	    <span class="author-block">Yuanchuan Lai<sup>1</sup> </span>
@@ -119,7 +119,7 @@
           <div class="is-size-5 publication-authors">
             <span class="author-block"><sup>1</sup>Sun Yat-sen University  <sup>2</sup>National University of Defense Technology</span> 
             <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Corresponding Author</small></span>
-          </div>
+          </div> -->
           
 
 
