--- a/index.html
+++ b/index.html
@@ -258,10 +258,10 @@
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
 
-        <h2 class="title is-3">Abstract</h2>
+        <h2 class="title is-3">简介</h2>
         <div class="content has-text-justified">
           <p>
-          In the realm of robotics, teleoperation plays a pivotal role in performing high-risk or intricate tasks, and obtaining precise 3D whole-body pose is crucial for this purpose. Traditional two-stage methods have limitations in estimating different body parts, leading to complex systems and higher estimation errors. In order to address these issues,the paper introduces a novel framework called Graph High-Resolution Network(GraphHRNet) for accurate 3D whole-body pose estimation, which is essential for the teleoperation of humanoid robots. GraphHRNet effectively captures global structural information and local details by integrating a High-Resolution Module and a Multi-branch Regression Module. The High-Resolution Module utilizes an enhanced graph convolution kernel to fuse multi-scale features, capturing global information, while the Multi-branch Regression Module focuses on refining and predicting accurate 3D coordinates for intricate body parts such as hands and face. Experimental results on the H3WB dataset demonstrate that GraphHRNet surpasses state-of-the-art(SOTA) methods in 3D whole-body pose estimation , significantly improving performance. Furthermore, the paper explores the potential application of this approach in a teleoperation system for humanoid robots, providing an intuitive and high-fidelity solution for remotely executing complex tasks.
+          本系统旨在提升病房护理的智能化和便捷性，特别适用于需要远程照护的医疗场景。系统由一张配备滑轨的病床、安装在滑轨上的机械臂（配备灵巧手）以及两个摄像头组成，实现远程操作下的精准护理。当病人需要获取物品时，操作人员可通过远程控制系统完成任务。首先，机械臂利用摄像头进行全局环境感知，环视病房寻找目标物品，并估计其大致位置。随后，机械臂自动移动至物品附近，确保抓取位置的精准性。在操作环节，远程操作者通过视觉遥操作系统精确控制机械臂抓取目标物品。成功抓取后，机械臂将物品稳妥地递送至病人手中，实现安全、精准、高效的护理支持。该系统可有效减少护理人员的工作负担，提高病房护理的自动化水平，同时为行动不便或长期卧床的病人提供更加便捷的人性化服务。
           </p>
         </div>
       </div>
@@ -554,7 +554,7 @@ Our human-to-robot motion retargeting connects robot control with diverse source
   </section> -->
     
     
-<section class="section" id="BibTeX">
+<!-- <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
       <pre><code>
@@ -567,7 +567,7 @@ Our human-to-robot motion retargeting connects robot control with diverse source
   number={}
 </code></pre>
     </div>
-</section>
+</section> -->
 
 
 
