--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
   </div>
 </section>
 
-<section class="hero is-small">
+<!-- <section class="hero is-small">
   <div class="hero-body">
     <div class="container">
 
@@ -280,7 +280,7 @@
   </div>
 </div>
 </div>
-</section>
+</section> -->
 
 
 
