--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   
-  <meta property="og:title" content="基于遥操作的智慧病房护理系统"/>
+  <meta property="og:title" content="仓储物流场景下多类物品遥操作灵巧抓取"/>
   <meta property="og:url" content="https://github.com/Z-mingyu/Hospital/"/>
   <meta property="og:image:width" content="1200"/>
   <meta property="og:image:height" content="630"/>
@@ -92,9 +92,9 @@
     <div class="container is-max-widescreen">
       <!-- <div class="columns is-centered"> -->
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">基于遥操作的智慧病房护理系统</h1>
+          <h1 class="title is-1 publication-title">仓储物流场景下多类物品遥操作灵巧抓取</h1>
           <div class="is-size-3 publication-authors">
-            2024.03-2024.06
+            2024.03-2024.12
           </div>
         </div>
     </div>
@@ -232,7 +232,7 @@
 </section>
  -->
 
-  <section class="hero is-small">
+<!--   <section class="hero is-small"> -->
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
@@ -248,6 +248,42 @@
         </div>
     </div>
   </div>
+  </div>
+<!--   </div> -->
+</section>
+    
+<section class="section hero is-light">
+  <div class="container is-max-desktop">
+    <!-- Abstract. -->
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+
+        <h2 class="title is-3">简介</h2>
+        <div class="content has-text-justified">
+          <p>
+            本系统旨在提升病房护理的智能化和便捷性，特别适用于需要远程照护的医疗场景。系统由一张配备滑轨的病床、安装在滑轨上的机械臂（配备灵巧手）以及两个摄像头组成，实现远程操作下的精准护理。当病人需要获取物品时，操作人员可通过远程控制系统完成任务。首先，机械臂利用摄像头进行全局环境感知，环视病房寻找目标物品，并估计其大致位置。随后，机械臂自动移动至物品附近，确保抓取位置的精准性。在操作环节，远程操作者通过视觉遥操作系统精确控制机械臂抓取目标物品。成功抓取后，机械臂将物品稳妥地递送至病人手中，实现安全、精准、高效的护理支持。该系统可有效减少护理人员的工作负担，提高病房护理的自动化水平，同时为行动不便或长期卧床的病人提供更加便捷的人性化服务。
+          </p>
+        </div>
+      </div>
+    </div>
+    <!--/ Abstract. -->
+  </div>
+</section>
+	
+<section class="hero teaser">
+  <div class="container is-max-desktop">
+    <div class="hero-body">
+      <div class="container">
+        <div class="item">
+          <p style="margin-bottom: 30px">
+ 
+        <video poster="" id="tree" autoplay controls muted loop height="100%">
+          <source src="static/figures/videos/overview.mp4"
+          type="video/mp4">
+        </video>
+        </p>
+        </div>
+    </div>
   </div>
   </div>
 </section>
@@ -269,7 +305,7 @@
     <!--/ Abstract. -->
   </div>
 </section>
-
+	
 <!-- <section class="hero is-small">
   <div class="hero-body">
     <div class="container">
@@ -572,7 +608,7 @@ Our human-to-robot motion retargeting connects robot control with diverse source
 
 
 
-<footer class="footer">
+<!-- <footer class="footer"> -->
  <!--  <div class="container">
     <div class="content has-text-centered">
       <a class="icon-link"
@@ -583,7 +619,7 @@ Our human-to-robot motion retargeting connects robot control with diverse source
       <i class="fab fa-github"></i>
     </a>
   </div> -->
-  <div class="columns is-centered">
+<!--   <div class="columns is-centered">
     <div class="column is-8">
       <div class="content">
         <p>
@@ -599,7 +635,7 @@ Our human-to-robot motion retargeting connects robot control with diverse source
   </div>
 </div>
 </div>
-</footer>
+</footer> -->
 
   </body>
   </html>
