--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 </section>
  -->
 
-<!--   <section class="hero is-small"> -->
+  <section class="hero is-small">
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
@@ -249,7 +249,7 @@
     </div>
   </div>
   </div>
-<!--   </div> -->
+  </div>
 </section>
     
 <section class="section hero is-light">
@@ -270,6 +270,7 @@
   </div>
 </section>
 	
+<section class="hero is-small">
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
@@ -284,6 +285,7 @@
         </p>
         </div>
     </div>
+  </div>
   </div>
   </div>
 </section>
