--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta property="og:image:height" content="630"/>
 
 
-  <title>基于遥操作的智慧病房护理系统</title>
+  <title>仓储物流场景下多类物品遥操作灵巧抓取</title>
   
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
@@ -261,8 +261,7 @@
         <h2 class="title is-3">简介</h2>
         <div class="content has-text-justified">
           <p>
-            本系统旨在提升病房护理的智能化和便捷性，特别适用于需要远程照护的医疗场景。系统由一张配备滑轨的病床、安装在滑轨上的机械臂（配备灵巧手）以及两个摄像头组成，实现远程操作下的精准护理。当病人需要获取物品时，操作人员可通过远程控制系统完成任务。首先，机械臂利用摄像头进行全局环境感知，环视病房寻找目标物品，并估计其大致位置。随后，机械臂自动移动至物品附近，确保抓取位置的精准性。在操作环节，远程操作者通过视觉遥操作系统精确控制机械臂抓取目标物品。成功抓取后，机械臂将物品稳妥地递送至病人手中，实现安全、精准、高效的护理支持。该系统可有效减少护理人员的工作负担，提高病房护理的自动化水平，同时为行动不便或长期卧床的病人提供更加便捷的人性化服务。
-          </p>
+            该系统采用2D手部姿态估计+深度相机的技术方案来实现手部的6D位姿估计。首先，通过2D手部关键点检测获取手部像素坐标，并结合深度相机数据完成像素坐标系到世界坐标系的转换，实现三维定位。然后，系统计算手掌法向量的朝向，以确定机械臂末端的姿态，从而获取完整的6D位姿信息。接下来，利用逆运动学（IK）算法求解机械臂各个关节角度，确保机械臂能够精准跟随操作者的手部动作。在控制层面，系统采用数据透传与路径规划相结合的方式，实现高效、平滑的硬件执行，使机械臂能够自然流畅地完成抓取操作。
         </div>
       </div>
     </div>
@@ -279,7 +278,7 @@
           <p style="margin-bottom: 30px">
  
         <video poster="" id="tree" autoplay controls muted loop height="100%">
-          <source src="static/figures/videos/overview.mp4"
+          <source src="static/figures/videos/VR.mp4"
           type="video/mp4">
         </video>
         </p>
@@ -299,7 +298,7 @@
         <h2 class="title is-3">简介</h2>
         <div class="content has-text-justified">
           <p>
-          本系统旨在提升病房护理的智能化和便捷性，特别适用于需要远程照护的医疗场景。系统由一张配备滑轨的病床、安装在滑轨上的机械臂（配备灵巧手）以及两个摄像头组成，实现远程操作下的精准护理。当病人需要获取物品时，操作人员可通过远程控制系统完成任务。首先，机械臂利用摄像头进行全局环境感知，环视病房寻找目标物品，并估计其大致位置。随后，机械臂自动移动至物品附近，确保抓取位置的精准性。在操作环节，远程操作者通过视觉遥操作系统精确控制机械臂抓取目标物品。成功抓取后，机械臂将物品稳妥地递送至病人手中，实现安全、精准、高效的护理支持。该系统可有效减少护理人员的工作负担，提高病房护理的自动化水平，同时为行动不便或长期卧床的病人提供更加便捷的人性化服务。
+          第二套系统采用Apple Vision Pro进行6D位姿估计。借助Vision Pro强大的硬件性能与高精度手部追踪算法，该系统能够精准估计手部关键点的3D位置及腕关节的6D位姿。随后，通过局域网通信将数据回传至机械臂控制主机。系统进一步采用转换算法计算灵巧手的关节弯曲角度，并结合逆运动学（IK）求解机械臂的关节旋转角度，从而实现高精度的遥操作抓取任务，为用户带来更加沉浸式的远程控制体验。两套系统方案均可有效提升仓储物流作业的智能化水平，同时也可作为具身智能模型数据采集的有力工具，为机器人学习与自主操作提供高质量训练数据，推动智能机器人在实际应用中的落地与发展。
           </p>
         </div>
       </div>
