--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8">
   
-  <meta property="og:title" content="仓储物流场景下多类物品遥操作灵巧抓取"/>
+  <meta property="og:title" content="具身智能"/>
   <meta property="og:url" content="https://github.com/Z-mingyu/Hospital/"/>
   <meta property="og:image:width" content="1200"/>
   <meta property="og:image:height" content="630"/>
 
 
-  <title>仓储物流场景下多类物品遥操作灵巧抓取</title>
+  <title>具身智能</title>
   
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
